Significant slowdown when editing a mesh with shrinkwraps & slightly high poly #48695

Closed
opened 2016-06-21 03:46:31 +02:00 by Carlo Andreacchio · 12 comments

System Information
Windows 7 x64 gtx 580

Blender Version
Broken: 9c60043
Worked: ad6b7c0 (2.76)

Short description of error
Significant slowdown in terms of editing a mesh with shrinkwraps and slightly high poly

Exact steps for others to reproduce the error

  1. open attached blend file in working git build
  2. notice how fast it is to edit the base mesh (just tab in and out)
  3. open attached blend file in broken git build
  4. notice how blender locks up when tryng to tab in and out
  5. force quit blender
  6. open attached blend file in broken git build
  7. delete all the middle planes which are shrinkwrapped to base mesh
  8. edit base mesh
  9. no lockup.
**System Information** Windows 7 x64 gtx 580 **Blender Version** Broken: 9c60043 Worked: ad6b7c0 (2.76) **Short description of error** Significant slowdown in terms of editing a mesh with shrinkwraps and slightly high poly **Exact steps for others to reproduce the error** 1. open attached blend file in working git build 2. notice how fast it is to edit the base mesh (just tab in and out) 3. open attached blend file in broken git build 4. notice how blender locks up when tryng to tab in and out 5. force quit blender 6. open attached blend file in broken git build 7. delete all the middle planes which are shrinkwrapped to base mesh 8. edit base mesh 9. no lockup.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Forgot to attach file!

setup.blend

Forgot to attach file! [setup.blend](https://archive.blender.org/developer/F317955/setup.blend)

Found two closer builds to isolate where the slowdown occured:

1422f0d works fine
999d5a6 doesnt

Found two closer builds to isolate where the slowdown occured: 1422f0d works fine 999d5a6 doesnt

Should clarify, it is not just tabbing in and out which is the problem but also manipulating the base mesh.

Should clarify, it is not just tabbing in and out which is the problem but also manipulating the base mesh.
Campbell Barton self-assigned this 2016-06-21 09:23:08 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Caused by 0b5a0d8412

Since this commit bvhtree_from_editmesh_looptri runs for every shrink wrap modifier evaluation.

Caused by 0b5a0d8412 Since this commit `bvhtree_from_editmesh_looptri` runs for every shrink wrap modifier evaluation.

Any chance there is a build with D2069 applied? would like to check it out and see if it fixes the problem

Any chance there is a build with [D2069](https://archive.blender.org/developer/D2069) applied? would like to check it out and see if it fixes the problem

@candreacchio,
It's not the same fix but,
here's a build with a similar correction: blender_branch_refractor_bvhutils.zip

@candreacchio, It's not the same fix but, here's a build with a similar correction: [blender_branch_refractor_bvhutils.zip](https://www.dropbox.com/s/6qpyws120rab00u/blender_branch_refractor_bvhutils.zip?dl=0)

@mano-wii that seems to work great. nice work!

@mano-wii that seems to work great. nice work!

This issue was referenced by 2e41df6847

This issue was referenced by 2e41df6847b0234fc4ee17adbaff817702450446

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48695
No description provided.